---
source: src/syntax/latex/lexer.rs
assertion_line: 248
expression: "verify(\"hello %world\\r\\ntest %test\")"

---
[
    (
        WORD,
        "hello",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        COMMENT,
        "%world",
    ),
    (
        LINE_BREAK,
        "\r\n",
    ),
    (
        WORD,
        "test",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        COMMENT,
        "%test",
    ),
]
